syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "PrometheusMetrics";

package user;


service UserService {
  rpc CreateUser (CreateUserRequest) returns (UserResponse);
  rpc GetUser (GetUserRequest) returns (UserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
  rpc AdminOnly (google.protobuf.Empty) returns (AdminReply);
}

message AdminReply {
  string message = 1;
}


message CreateUserRequest {
  string name = 1;
  int32 age = 2;
}

message GetUserRequest {
  int32 id = 1;
}

message UpdateUserRequest {
  int32 id = 1;
  string name = 2;
  int32 age = 3;
}

message DeleteUserRequest {
  int32 id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}

message UserResponse {
  int32 id = 1;
  string name = 2;
  int32 age = 3;
}
